# rust-tutorial-for-typescript

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  null_undefined_demo
basic/conditionals/: answer.md  demo.rs  example.ts
basic/data-types/: answer.md  demo.rs  example.ts
basic/error-handling/: answer.md  demo.rs  example.ts
basic/functions/: answer.md  demo.rs  example.ts
basic/loops-iterators/: answer.md  demo.rs  example.ts
basic/ownership-borrowing/: answer.md  demo.rs  example.ts
basic/pattern-matching/: answer.md  demo.rs  example.ts
basic/variables-constants/: answer.md  demo.rs  example.ts
src/: main.rs
